# JellyBean

./: .gitignore  LICENSE  README.md
VQA/: Cargo.toml
VQA/examples/: config.json
VQA/examples/optimizer_inputs/: accuracy_requirement.json  config.yaml  execution_profile.csv  execution_profile_p50.csv  execution_profile_p90.csv  input_injection_rates.csv  logical_graph.csv  message_sizes.csv  nodes_accuracy_profiles.pkl  sources_workers_link.csv  throughput_normalization_ratios.csv  workers_partition.json  workers_specs.csv  workers_workers_link.csv
VQA/python/: baseline_spark.py  baseline_torch.py  extract.py  feature_extractor.py  speech_recognition.py  train.py  utils.py  vqa_inference.py
VQA/python/compression/: asr_compression.py  image_model_compression.py
VQA/python/configs/variants/: mutan_noatt_resnet101.yaml  mutan_noatt_resnet152.yaml  mutan_noatt_resnet18.yaml  mutan_noatt_resnet34.yaml  mutan_noatt_resnet50.yaml
VQA/python/configs/vqa2/: mutan_att_train_vg.yaml
VQA/python/evaluate_variants/: asr_engine.py  evaluate_resnet101.sh  evaluate_resnet152.sh  evaluate_resnet18.sh  evaluate_resnet34.sh  evaluate_resnet50.sh  performance_eval_asr_vqa.py  question_asr.py  vqa_evaluate_asr.py  vqa_evaluate_orig.py
VQA/python/models_profiler/: compute_message_size.py  extract_transcriptions.py  profile_asr.py  profile_image_model.py  profile_vqa.py  utils.py
VQA/python/performance_eval/: eval_asr.sh  eval_image_model.sh  performance_eval_asr.py  performance_eval_image_model.py
VQA/python/vqa/datasets/: coco.py  vqa.py
VQA/python/vqa/lib/: engine.py  utils.py
VQA/python/vqa/models/: convnets.py  seq2vec.py  utils.py
VQA/src/: config.rs  data.rs  lib.rs  resources.rs  utils.rs
VQA/src/image_feature_extract/: config.rs  data.rs  extract.rs  mod.rs
VQA/src/speech_recognition/: config.rs  data.rs  mod.rs  transcribe.rs
VQA/src/vqa_inference/: config.rs  data.rs  inference.rs  mod.rs
VQA/tests/: extract_image_feature.rs  speech_recognition.rs  vqa_inference.rs
exeuctor/MLdataflow/: Cargo.toml
exeuctor/MLdataflow/examples/: simple_local_map.rs
exeuctor/MLdataflow/examples/simple_two_stages_pipeline/: main.rs  relay.rs  worker.rs
exeuctor/MLdataflow/src/: builder.rs  config.rs  graph.rs  inputs.rs  lib.rs  metrics.rs
exeuctor/MLdataflow/src/execute/: local.rs  mod.rs  pipeline.rs
exeuctor/MLdataflow/src/handle/: aggregate.rs  exchange.rs  filter.rs  inspect.rs  join.rs  map.rs  mod.rs  union.rs
exeuctor/MLdataflow/src/input/: buffered_contained.rs  buffered_distributed_contained.rs  closure.rs  contained.rs  distributed_contained.rs  mod.rs
exeuctor/MLdataflow/src/node/: aggregate.rs  exchange.rs  filter.rs  inspect.rs  join.rs  map.rs  mod.rs  union.rs
exeuctor/MLdataflow/src/operators_timely/: filter.rs  inspect.rs  map.rs  mod.rs
exeuctor/MLdataflow/src/static_timely/: mod.rs  timely_static_execute.rs  timely_static_pipeline_execute.rs  timely_static_pipeline_scope.rs  timely_static_scope.rs  timely_static_worker.rs
exeuctor/MLdataflow/src/utils/: infer_pipeline_io.rs  mod.rs
exeuctor/MLdataflow/timely-dataflow/: Cargo.toml
exeuctor/MLdataflow/timely-dataflow/abomonation/src/: lib.rs
exeuctor/MLdataflow/timely-dataflow/abomonation_derive/: Cargo.toml
exeuctor/MLdataflow/timely-dataflow/abomonation_derive/src/: lib.rs
exeuctor/MLdataflow/timely-dataflow/abomonation_derive/tests/: test.rs
exeuctor/MLdataflow/timely-dataflow/bytes/src/: lib.rs
exeuctor/MLdataflow/timely-dataflow/communication/: Cargo.toml
exeuctor/MLdataflow/timely-dataflow/communication/examples/: comm_direct_relay.rs  comm_hello.rs
exeuctor/MLdataflow/timely-dataflow/communication/src/: buzzer.rs  initialize.rs  initialize_relay_node.rs  initialize_worker_direct_relay.rs  initialize_worker_with_relay.rs  lib.rs  logging.rs  message.rs  networking.rs
exeuctor/MLdataflow/timely-dataflow/kafkaesque/: Cargo.toml
exeuctor/MLdataflow/timely-dataflow/logging/src/: lib.rs
exeuctor/MLdataflow/timely-dataflow/pipeline_examples/: Cargo.toml
exeuctor/MLdataflow/timely-dataflow/timely/: Cargo.toml
exeuctor/MLdataflow/timely-dataflow/timely/src/: execute_pipeline.rs  (+4 more)
(+103 files in other folders)
