[package]
name = "vqa-workload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
numpy = "0.15"
ndarray = { version = "0.15", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mlflow = { path = "../exeuctor/MLdataflow", version = "0.2" }
abomonation = { path = "../exeuctor/MLdataflow/timely-dataflow/abomonation", version = "0.7.3" }
abomonation_derive = { path = "../exeuctor/MLdataflow/timely-dataflow/abomonation_derive", version = "0.5" }
structopt = "0.3.25"
shellexpand = "2.1"

[dependencies.pyo3]
version = "0.15.0"
features = ["auto-initialize"]


[dev-dependencies]
float-cmp = "0.9"
