[package]
name = "mlflow"
version = "0.2.4"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timely = { path = "./timely-dataflow/timely" }
structopt = "0.3.25"
rand = "0.8"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
abomonation = { path = "./timely-dataflow/abomonation", version = "0.7.3" }
abomonation_derive = { path = "./timely-dataflow/abomonation_derive", version = "0.5" }
chrono = "0.4"
statrs = "0.15"

[features]
default = []
bincode= ["timely/bincode"]
